Add reference to exploration-exploitation

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -365,3 +365,12 @@
    url = {https://press.princeton.edu/books/ebook/9781400835386/dynamic-programming-pdf},
    year = {1957}
 }
+@techReport{Thrun1992,
+   author = {Sebastian Thrun},
+   city = {Pittsburgh, PA},
+   institution = {Carnegie Mellon University},
+   month = {1},
+   title = {Efficient Exploration In Reinforcement Learning},
+   url = {https://www.ri.cmu.edu/publications/efficient-exploration-in-reinforcement-learning/},
+   year = {1992}
+}
